Version 0.7:
	* PROTON-452: Exposed Messenger interrupt method.
	* PROTON-454: Add route method to Messenger.
	* PROTON-455: Add rewrite method to Messenger.

Version 0.6:
	* PROTON-427: Removed the flag argument from Messenger.settle.

version 0.5:
	* Duck typed the Array class to work with Qpid::Proton::Data.
	* Duck typed the Hash class to work with Qpid::Proton::Data.
	* Fixed broken Rspec tests due to changes in under Proton C.
	  - Messenger.receive can accept a negative maximum
	  - When testing bad subscribe attempts, tests now use a random string.
	* Fixed encoding decimal128 values.
	* Added properties field to Qpid::Proton::Message.
	* Hashes are now automatically encoded into Data objects.
	* Fixed encoding Time objects.
	* Added instructions field to Qpid::Proton::Message.
	* Added annotations field to Qpid::Proton::Message.
	* Fixed encoding Symbol objects.
	* Added body field to Qpid::Proton::Message.

version 0.4:
	* No language-specific features developed in this release.

version 0.3:
	* No language-specific features developed in this release.
	* Dropped the Rakefile in favor of packaging with a gemspec.
	* Removed the qpid_proton/version.rb file as unused.

version 0.2:
	* First implementation of the stable APIs on top of swig.
	* Wrote the Rspec tests to test the new APIs.
	* Added SimpleCov support to monitor Rspec test coverage.