@@ -2,6 +2,7 @@ Version 0.7:
 	* PROTON-452: Exposed Messenger interrupt method.
 	* PROTON-454: Add route method to Messenger.
 	* PROTON-455: Add rewrite method to Messenger.
+	* PROTON-456: Add password property to Messenger.
 
 Version 0.6:
 	* PROTON-427: Removed the flag argument from Messenger.settle.
